--- a/ex001/css/header.css
+++ b/ex001/css/header.css
@@ -1,6 +1,7 @@
 :root {
   --mainColor: #16a34a;
   --secondColor: #166534;
+  --neutralColor: #a3a3a3;
   --transitionTime: 0.5s;
 }
 
@@ -11,6 +12,7 @@ header {
   padding: 1rem 2rem;
   background-color: #fff;
   position: relative;
+  border-bottom: 1px solid var(--neutralColor);
 }
 
 .logo {
