--- a/ex001/css/main-content.css
+++ b/ex001/css/main-content.css
@@ -42,7 +42,7 @@ section {
 .typewriter-container p {
   color: var(--mutedText);
   font-size: 1rem;
-  margin: 0.8rem 0;
+  margin: 2rem 0;
 }
 
 .typewriter-container button {
@@ -50,7 +50,7 @@ section {
   background-color: var(--mainColor);
   color: #fff;
   padding: 0.7rem 2rem;
-  border-radius: 10px;
+  border-radius: var(--rounded-xl);
   border: 2px solid var(--mainColor);
   cursor: pointer;
   transition: all 0.2s ease;
@@ -68,14 +68,14 @@ section {
 }
 
 .img-main {
-  border-radius: 10px;
+  border-radius: var(--rounded-xl);
   width: 420px;
   height: 420px;
   object-fit: cover;
 }
 
 .section-objective {
-  padding-top: 8rem;
+  padding-top: 8.5rem;
 }
 
 .section-objective h1 {
@@ -86,7 +86,7 @@ section {
 
 .section-objective p {
   font-size: 1rem;
-  margin: 1rem 0;
+  margin: 2rem 0;
   color: var(--mutedText);
 }
 
@@ -101,7 +101,7 @@ section {
   width: 100%;
   height: 300px;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: var(--rounded-xl);
 }
 
 @keyframes blink {
@@ -139,7 +139,6 @@ section {
   }
 
   .typewriter-container p {
-    margin-top: 1rem;
     font-size: 0.9rem;
   }
 }
