--- a/ex001/css/style.css
+++ b/ex001/css/style.css
@@ -1,11 +1,12 @@
 @import url("header.css");
 @import url("main-content.css");
 @import url("grid-area.css");
+@import url("accordion.css");
 
 :root {
   --bgDefault: #fff;
   --bgSection: #f3efe0;
-  --mainColor: #499f68;
+  --mainColor: #16a34a;
 
   --mutedText: #737373;
   --secondColor: #166534;
