--- a/ex001/css/style.css
+++ b/ex001/css/style.css
@@ -26,6 +26,13 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+body.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-color: var(--bgBody);
 }
