--- a/ex001/css/style.css
+++ b/ex001/css/style.css
@@ -2,6 +2,7 @@
 @import url("main-content.css");
 @import url("grid-area.css");
 @import url("accordion.css");
+@import url("footer.css");
 
 :root {
   --bgDefault: #fff;
